Migrated frontpage feed to the unified ExtendedPost object
